[package]
name = "cetar"
version = "0.1.1"
edition = "2021"
description = "💥 CURL execution timing analyzer"
license = "MIT"
tags = ["curl", "timing", "analyzer", "http", "https", "cli"]

[[bin]]
name = "cetar"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
curl = "0.4.46"
