[package]
name = "cetar"
version = "0.1.3"
edition = "2021"
description = "💥 CURL execution timing analyzer"
documentation = "https://docs.rs/cetar"
repository = "https://github.com/kakilangit/cetar"
license = "MIT"
keywords = ["curl", "cetar", "cli"]
authors = ["kakilangit <crates@kakilangit.dev>"]

[[bin]]
name = "cetar"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
curl = "0.4.46"
